# cpp-project-structure

./: .gitignore  CMakeLists.txt  README.md
MainProject/: .CMakeLists.txt.swp  CMakeLists.txt
MainProject/inc/: Student.h
MainProject/src/: .CMakeLists.txt.swp  CMakeLists.txt  Student.cpp  main.cpp
